<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <RadioButton android:id="@+id/radio4" android:text="@string/radio_4" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <RadioButton android:id="@+id/radio6" android:text="@string/radio_6" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <RadioButton android:id="@+id/radio8" android:text="@string/radio_8" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <RadioButton android:id="@+id/radio10" android:text="@string/radio_10" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <RadioButton android:id="@+id/radio12" android:text="@string/radio_12" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <RadioButton android:id="@+id/radio20" android:text="@string/radio_20" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <RadioButton android:id="@+id/radioCustom" android:text="@string/radio_custom" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:entries="@array/custom_sides" />

    <Button
        android:id="@+id/btnRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_once_button"
        android:layout_below="@+id/spinner"/>

    <Button
        android:id="@+id/btnRollTwice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_twice_button"
        android:layout_below="@+id/btnRoll"
        />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRollTwice"
        android:text="@string/textview_result"/>

</RelativeLayout>